# oddsockets-c-sdk

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
docs/: index.html
examples/: basic_usage.c  enhanced_features_usage.c  index.html
src/: enhanced_features.h  http_client.c  http_client.h  json_parser.c  json_parser.h  manager_discovery.c  manager_discovery.h  message_size_validator.h  message_validator.h  oddsockets.c  oddsockets.h  websocket_client.c  websocket_client.h
